@@ -3,6 +3,7 @@
  - enh: allow to download all resources of a collection (#13)
  - ref: introduce dedicated `api_common` submodule (moved from
    `upload.dataset`)
+ - ref: introduce dedicated `common` submodule
 0.6.4
  - enh: automatically respwan job tasks on connection errors (#26)
  - enh: allow to abort the "compress" step of a job
